# mfx-base-app

./: CMakeLists.txt  CMakePresets.json  README.md  app.bat  app.command  app.sh  make-app.sh  minimal_sdl.lua
.github/workflows/: build.yml  ci.yml
app/: main.lua
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c
test/: CMakeLists.txt
test/source/: mfx-base-app_test.c
